misc new sprites
Co-Authored-By: FilipOK <119059427+FILIPOKonGithup@users.noreply.github.com>

--- a/data/AUTHORS
+++ b/data/AUTHORS
@@ -1,6 +1,6 @@
 == Images ==
 
-Most graphics as of 0.7 were created by Rustybox, Eauix, WeLuvGoatz, FrostC and Bruhmoent. Check the log for details.
+Most graphics as of 0.7 were created by Rustybox, Eauix, WeLuvGoatz, FrostC, FilipOK and Bruhmoent. Check the log for details.
 
 
 * images/background/icecliffs/icecliffs-*.png - Jason Lavallée, dual-licensed: GPL version 2 or later and CC-BY-SA
