--- a/data/locale/messages.pot
+++ b/data/locale/messages.pot
@@ -6,10 +6,10 @@
 #, fuzzy
 msgid ""
 msgstr ""
-"#-#-#-#-#  main.pot (SuperTux v0.7.0-beta.1-13-g54685e3dc)  #-#-#-#-#\n"
-"Project-Id-Version: SuperTux v0.7.0-beta.1-13-g54685e3dc\n"
+"#-#-#-#-#  main.pot (SuperTux v0.7.0-beta.1-11-g0c0464937)  #-#-#-#-#\n"
+"Project-Id-Version: SuperTux v0.7.0-beta.1-11-g0c0464937\n"
 "Report-Msgid-Bugs-To: https://github.com/SuperTux/supertux/issues\n"
-"POT-Creation-Date: 2025-12-30 05:36+0000\n"
+"POT-Creation-Date: 2025-12-30 05:00+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -18,10 +18,10 @@ msgstr ""
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=INTEGER; plural=EXPRESSION;\n"
-"#-#-#-#-#  credits.pot (SuperTux v0.7.0-beta.1-13-g54685e3dc)  #-#-#-#-#\n"
-"Project-Id-Version: SuperTux v0.7.0-beta.1-13-g54685e3dc\n"
+"#-#-#-#-#  credits.pot (SuperTux v0.7.0-beta.1-11-g0c0464937)  #-#-#-#-#\n"
+"Project-Id-Version: SuperTux v0.7.0-beta.1-11-g0c0464937\n"
 "Report-Msgid-Bugs-To: https://github.com/SuperTux/supertux/issues\n"
-"POT-Creation-Date: 2025-12-30 05:36+0000\n"
+"POT-Creation-Date: 2025-12-30 05:00+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -29,10 +29,10 @@ msgstr ""
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"#-#-#-#-#  objects.pot (SuperTux v0.7.0-beta.1-13-g54685e3dc)  #-#-#-#-#\n"
-"Project-Id-Version: SuperTux v0.7.0-beta.1-13-g54685e3dc\n"
+"#-#-#-#-#  objects.pot (SuperTux v0.7.0-beta.1-11-g0c0464937)  #-#-#-#-#\n"
+"Project-Id-Version: SuperTux v0.7.0-beta.1-11-g0c0464937\n"
 "Report-Msgid-Bugs-To: https://github.com/SuperTux/supertux/issues\n"
-"POT-Creation-Date: 2025-12-30 05:36+0000\n"
+"POT-Creation-Date: 2025-12-30 05:00+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -40,10 +40,10 @@ msgstr ""
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"#-#-#-#-#  tilesets.pot (SuperTux v0.7.0-beta.1-13-g54685e3dc)  #-#-#-#-#\n"
-"Project-Id-Version: SuperTux v0.7.0-beta.1-13-g54685e3dc\n"
+"#-#-#-#-#  tilesets.pot (SuperTux v0.7.0-beta.1-11-g0c0464937)  #-#-#-#-#\n"
+"Project-Id-Version: SuperTux v0.7.0-beta.1-11-g0c0464937\n"
 "Report-Msgid-Bugs-To: https://github.com/SuperTux/supertux/issues\n"
-"POT-Creation-Date: 2025-12-30 05:36+0000\n"
+"POT-Creation-Date: 2025-12-30 05:00+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -51,10 +51,10 @@ msgstr ""
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"#-#-#-#-#  converters.pot (SuperTux v0.7.0-beta.1-13-g54685e3dc)  #-#-#-#-#\n"
-"Project-Id-Version: SuperTux v0.7.0-beta.1-13-g54685e3dc\n"
+"#-#-#-#-#  converters.pot (SuperTux v0.7.0-beta.1-11-g0c0464937)  #-#-#-#-#\n"
+"Project-Id-Version: SuperTux v0.7.0-beta.1-11-g0c0464937\n"
 "Report-Msgid-Bugs-To: https://github.com/SuperTux/supertux/issues\n"
-"POT-Creation-Date: 2025-12-30 05:36+0000\n"
+"POT-Creation-Date: 2025-12-30 05:00+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
