Update music section in AUTHORS
Since Wansti's music no longer makes up the majority of the soundtrack, his tracks are now individually credited instead.

Tracks were also sorted alphabetically by file name.

--- a/data/AUTHORS
+++ b/data/AUTHORS
@@ -27,72 +27,69 @@ Test levels are created by SuperTux developers to test specific code and so are 
 License should be included with them.
 
 == Music ==
-
-All files in data/music created by wansti and licensed under GPLv2+CC-by-sa, unless stated otherwise.
-* airship_remix.ogg - by Bart Kelsey submitted by remaxim at OpenGameArt.org, permission to release under CC-BY-SA and GPL version 2 or later
 * airship_2.ogg - Jason Lavallée, dual-licensed: GPL version 2 or later and CC-BY-SA
+* airship_remix.ogg - by Bart Kelsey submitted by remaxim at OpenGameArt.org, permission to release under CC-BY-SA and GPL version 2 or later
+* arctic_breeze.ogg - Jason Lavallée, dual-licensed: GPL version 2 or later and CC-BY-SA
 * arctic_cave.ogg - Jason Lavallée, dual-licensed: GPL version 2 or later and CC-BY-SA
 * battle_theme.ogg - from remaxim at OpenGameArt.org, permission to release under CC-BY-SA 3.0 and GPL version 2 or later
 * beneath_the_rabbit_hole.ogg - Jason Lavallée, dual-licensed: GPL version 2 or later and CC-BY-SA
-* bonuscave.ogg
-* bossattack.ogg
+* bonuscave.ogg - Marek "Wansti" Moeckel, dual-licensed: GPL version 2 or later and CC-BY-SA
+* bossattack.ogg - Marek "Wansti" Moeckel, dual-licensed: GPL version 2 or later and CC-BY-SA
 * bright_thunders.ogg - by Chris "Krobonil" Leutwyler, licensed under CC-BY-SA
-* cave.ogg
-* cave_old.ogg
 * call_of_the_winding_path.ogg - Jason Lavallée, dual-licensed: GPL version 2 or later and CC-BY-SA
-* chipdisko.ogg - Mortimer's Chipdisko by Lukas Nystrand as Mortimer Twang - explicit permission granted to release unter GPL and CC-by-sa.
-* clavelian_march.ogg by Treskalle
-* credits.ogg
-* darkforestkeep.ogg
-* forest-cave.ogg - Jason Lavallée, dual-licensed: GPL version 2 or later and CC-BY-SA
-* forest.ogg
-* forest2.ogg
-* forest3.ogg
-* forestmap.ogg
-* forest_theme.ogg - Forest Prophecy reEducated, by Wansti and Tobias "ToBeFree" Frei (GPLv2+CC-by-sa)
-* forest-sprint.ogg - Jason Lavallée, dual-licensed: GPL version 2 or later and CC-BY-SA
-* fortress.ogg
-* fortress_old.ogg
-* ghostforest_map.ogg - Jason Lavallée, dual-licensed: GPL version 2 or later and CC-BY-SA
-* ghostforest.ogg
-* ghostforest2.ogg
-* greatgigantic.ogg - by Wansti based on a work by Chris Huelsbeck - We have his permission to release this under GPL.
-* shallow-green.ogg - Jason Lavallée, dual-licensed: GPL version 2 or later and CC-BY-SA
-* halloween_1.ogg - By Forty-Two - licensed under CC-BY-SA 4.0
-* ice_music.ogg - By ZhayTee
-* intro.ogg
-* invincible.ogg
-* arctic_breeze.ogg - Jason Lavallée, dual-licensed: GPL version 2 or later and CC-BY-SA
-* jewels.ogg - By Alex \"cynicmusic\" Smith edited by congusbongus - <http://opengameart.org/content/crystal-cave-mysterious-ambience-seamless-loop> - CC-BY 3.0/CC-BY-SA 3.0/GPL 3.0
-* leveldone.ogg
-* march_of_the_malevolent.ogg - Servalot, Wansti (original forest/'ghost' forest theme), licensed CC-BY-SA 4.0
-* new_forest_map.ogg - Jason Lavallée, dual-licensed: GPL version 2 or later and CC-BY-SA
-* salcon.ogg - Salsa Con Carne by DJ Gentoo based on work by Asbjorn \"Mystical\" Andersen - Replaced due to licensing issues (some non-free samples are used)
-    by a work-in-progress remix in trunk and the 0.3.x branch (r4585), for which we have permission to release under GPL and CC-by-sa. - wansti
-* saharan_penguin.ogg - by Enol "Meji" Monte, licensed CC BY-SA
-* theme.ogg
-* treeboss.ogg
-* tropicalbreeze.ogg - by flan, licensed CC-BY-SA 4.0
-* wisphunt.ogg
-* worldmap_old.ogg - By ZhayTee
-* voc-***.ogg
-* night.ogg - By SnugglyBun, licensed under CC-BY-SA 4.0
-* worldmap_ice.ogg - By SnugglyBun, licensed under CC-BY-SA 4.0
-* sunset.ogg - By SnugglyBun, licensed under CC-BY-SA 4.0
-* skylevel.ogg - By SnugglyBun, licensed under CC-BY-SA 4.0
-* midday.ogg - By SnugglyBun, licensed under CC-BY-SA 4.0
-* midday_alt.ogg - By SnugglyBun, licensed under CC-BY-SA 4.0
-* cavetheme.ogg - By SnugglyBun, based on the original cave theme by Wansti. licensed under CC-BY-SA 4.0
-* cavetheme_alt.ogg - By SnugglyBun, cover of the original cave theme by Wansti. licensed under CC-BY-SA 4.0
+* calm_ocean.ogg - By Chitan (Nathan Lieb), unknown license
+* cave_old.ogg - Marek "Wansti" Moeckel, dual-licensed: GPL version 2 or later and CC-BY-SA
+* cave.ogg - Marek "Wansti" Moeckel, dual-licensed: GPL version 2 or later and CC-BY-SA
+* cavetheme_alt.ogg - By SnugglyBun, cover of the original cave theme by Wansti. Licensed under CC-BY-SA 4.0
+* cavetheme.ogg - By SnugglyBun, based on the original cave theme by Wansti. Licensed under CC-BY-SA 4.0
+* chipdisko.ogg - Mortimer's Chipdisko by Lukas Nystrand as Mortimer Twang - explicit permission granted to release under GPL and CC-BY-SA.
+* clavelian_march.ogg - Treskalle, licensed under CC-BY-SA 4.0
+* credits.ogg - Marek "Wansti" Moeckel, dual-licensed: GPL version 2 or later and CC-BY-SA
 * crystalmine_intro.ogg - By SnugglyBun, licensed under CC-BY-SA 4.0
 * crystalmine_main.ogg - By SnugglyBun, licensed under CC-BY-SA 4.0
-* underwater.ogg - By SnugglyBun, licensed under CC-BY-SA 4.0
+* darkforestkeep.ogg - Marek "Wansti" Moeckel, dual-licensed: GPL version 2 or later and CC-BY-SA
+* forest_midday_alt.ogg - By SnugglyBun, based on forest.ogg and forest3.ogg by Wansti. Licensed under CC-BY-SA 4.0
+* forest_midday.ogg - By SnugglyBun, based on the original forest theme by Wansti. Licensed under CC-BY-SA 4.0
+* forest_theme.ogg - Forest Prophecy reEducated, by Wansti and Tobias "ToBeFree" Frei (GPLv2+CC-BY-SA)
+* forest-cave.ogg - Jason Lavallée, dual-licensed: GPL version 2 or later and CC-BY-SA
+* forest-sprint.ogg - Jason Lavallée, dual-licensed: GPL version 2 or later and CC-BY-SA
+* forest.ogg - Marek "Wansti" Moeckel, dual-licensed: GPL version 2 or later and CC-BY-SA
+* forest2.ogg - Marek "Wansti" Moeckel, dual-licensed: GPL version 2 or later and CC-BY-SA
+* forest3.ogg - Marek "Wansti" Moeckel, dual-licensed: GPL version 2 or later and CC-BY-SA
+* fortress_old.ogg - Marek "Wansti" Moeckel, dual-licensed: GPL version 2 or later and CC-BY-SA
+* fortress.ogg - Marek "Wansti" Moeckel, dual-licensed: GPL version 2 or later and CC-BY-SA
+* ghostforest_map.ogg - Jason Lavallée, dual-licensed: GPL version 2 or later and CC-BY-SA
+* ghostforest.ogg - Marek "Wansti" Moeckel, dual-licensed: GPL version 2 or later and CC-BY-SA
+* ghostforest2.ogg - Marek "Wansti" Moeckel, dual-licensed: GPL version 2 or later and CC-BY-SA
 * glacier.ogg - By SnugglyBun, licensed under CC-BY-SA 4.0
+* greatgigantic.ogg - By Wansti based on a work by Chris Huelsbeck - We have his permission to release this under GPL.
+* halloween_1.ogg - By Forty-Two - licensed under CC-BY-SA 4.0
+* ice_music.ogg - By ZhayTee - licensed under CC-BY-NC 2.0
+* icecastle.ogg - By SnugglyBun, based on the original fortress theme by Wansti. Licensed under CC-BY-SA 4.0
+* intro.ogg - Marek "Wansti" Moeckel, dual-licensed: GPL version 2 or later and CC-BY-SA
+* invincible.ogg - Marek "Wansti" Moeckel, dual-licensed: GPL version 2 or later and CC-BY-SA
+* jewels.ogg - By Alex \"cynicmusic\" Smith edited by congusbongus - <http://opengameart.org/content/crystal-cave-mysterious-ambience-seamless-loop> - CC-BY 3.0/CC-BY-SA 3.0/GPL 3.0
+* leveldone.ogg - Marek "Wansti" Moeckel, dual-licensed: GPL version 2 or later and CC-BY-SA
+* march_of_the_malevolent.ogg - Servalot, Wansti (original forest/'ghost' forest theme), licensed CC-BY-SA 4.0
+* midday_alt.ogg - By SnugglyBun, licensed under CC-BY-SA 4.0
+* midday.ogg - By SnugglyBun, licensed under CC-BY-SA 4.0
+* new_forest_map.ogg - Jason Lavallée, dual-licensed: GPL version 2 or later and CC-BY-SA
+* night.ogg - By SnugglyBun, licensed under CC-BY-SA 4.0
+* saharan_penguin.ogg - by Enol "Meji" Monte, licensed CC-BY-SA
+* salcon.ogg - Salsa Con Carne by DJ Gentoo based on work by Asbjorn \"Mystical\" Andersen - Replaced due to licensing issues (some non-free samples are used) by a work-in-progress remix in trunk and the 0.3.x branch (r4585), for which we have permission to release under GPL and CC-by-sa. - wansti
+* shallow-green.ogg - Jason Lavallée, dual-licensed: GPL version 2 or later and CC-BY-SA
+* skylevel.ogg - By SnugglyBun, licensed under CC-BY-SA 4.0
 * snowfort.ogg - By SnugglyBun, licensed under CC-BY-SA 4.0
-* icecastle.ogg - By SnugglyBun, based on the original fortress theme by Wansti. licensed under CC-BY-SA 4.0
-* yetiboss.ogg - By SnugglyBun, cover of the original boss battle theme by Wansti. licensed under CC-BY-SA 4.0
-* forest_midday.ogg - By SnugglyBun, based on the original forest theme by Wansti. licensed under CC-BY-SA 4.0
-* forest_midday_alt.ogg - By SnugglyBun, based on forest.ogg and forest3.ogg by Wansti. licensed under CC-BY-SA 4.0
+* sunset.ogg - By SnugglyBun, licensed under CC-BY-SA 4.0
+* theme.ogg - Marek "Wansti" Moeckel, dual-licensed: GPL version 2 or later and CC-BY-SA
+* treeboss.ogg - Marek "Wansti" Moeckel, dual-licensed: GPL version 2 or later and CC-BY-SA
+* tropicalbreeze.ogg - By flan, licensed CC-BY-SA 4.0
+* underwater.ogg - By SnugglyBun, licensed under CC-BY-SA 4.0
+* voc-***.ogg - semajD, dual-licensed: GPL version 2 or later and CC-BY-SA
+* wisphunt.ogg - Marek "Wansti" Moeckel, dual-licensed: GPL version 2 or later and CC-BY-SA
+* worldmap_ice.ogg - By SnugglyBun, licensed under CC-BY-SA 4.0
+* worldmap_old.ogg - By ZhayTee, licensed under CC-BY-NC 2.0
+* yetiboss.ogg - By SnugglyBun, cover of the original boss battle theme by Wansti. Licensed under CC-BY-SA 4.0
 
 == Scripts ==
 
