Just a few more tweaks to AUTHORS

--- a/data/AUTHORS
+++ b/data/AUTHORS
@@ -43,11 +43,15 @@ License should be included with them.
 * cavetheme_alt.ogg - By SnugglyBun, cover of the original cave theme by Wansti. Licensed under CC-BY-SA 4.0
 * cavetheme.ogg - By SnugglyBun, based on the original cave theme by Wansti. Licensed under CC-BY-SA 4.0
 * chipdisko.ogg - Mortimer's Chipdisko by Lukas Nystrand as Mortimer Twang - explicit permission granted to release under GPL and CC-BY-SA.
+* christmas_theme.ogg - Krobonil, remix of track by Marik "Wansti" Moeckel, licensed CC-BY-SA 2.0
+* classic.ogg - Unkown author and license
 * clavelian_march.ogg - Treskalle, licensed under CC-BY-SA 4.0
+* counter_current.ogg - Servalot, license under CC-BY-SA 4.0
 * credits.ogg - Marek "Wansti" Moeckel, dual-licensed: GPL version 2 or later and CC-BY-SA
 * crystalmine_intro.ogg - By SnugglyBun, licensed under CC-BY-SA 4.0
 * crystalmine_main.ogg - By SnugglyBun, licensed under CC-BY-SA 4.0
 * darkforestkeep.ogg - Marek "Wansti" Moeckel, dual-licensed: GPL version 2 or later and CC-BY-SA
+* deeply_rooted - Servalot, licensed under CC-BY-SA 4.0
 * forest_midday_alt.ogg - By SnugglyBun, based on forest.ogg and forest3.ogg by Wansti. Licensed under CC-BY-SA 4.0
 * forest_midday.ogg - By SnugglyBun, based on the original forest theme by Wansti. Licensed under CC-BY-SA 4.0
 * forest_theme.ogg - Forest Prophecy reEducated, by Wansti and Tobias "ToBeFree" Frei (GPLv2+CC-BY-SA)
@@ -69,6 +73,7 @@ License should be included with them.
 * intro.ogg - Marek "Wansti" Moeckel, dual-licensed: GPL version 2 or later and CC-BY-SA
 * invincible.ogg - Marek "Wansti" Moeckel, dual-licensed: GPL version 2 or later and CC-BY-SA
 * jewels.ogg - By Alex \"cynicmusic\" Smith edited by congusbongus - <http://opengameart.org/content/crystal-cave-mysterious-ambience-seamless-loop> - CC-BY 3.0/CC-BY-SA 3.0/GPL 3.0
+* late_sunset.ogg - bruhmoent, dual-licensed: GPL version 2 or later and CC-BY-SA
 * leveldone.ogg - Marek "Wansti" Moeckel, dual-licensed: GPL version 2 or later and CC-BY-SA
 * march_of_the_malevolent.ogg - Servalot, Wansti (original forest/'ghost' forest theme), licensed CC-BY-SA 4.0
 * midday_alt.ogg - By SnugglyBun, licensed under CC-BY-SA 4.0
@@ -82,9 +87,11 @@ License should be included with them.
 * snowfort.ogg - By SnugglyBun, licensed under CC-BY-SA 4.0
 * sunset.ogg - By SnugglyBun, licensed under CC-BY-SA 4.0
 * theme.ogg - Marek "Wansti" Moeckel, dual-licensed: GPL version 2 or later and CC-BY-SA
+* theme_old.ogg - Author and license unknown
 * treeboss.ogg - Marek "Wansti" Moeckel, dual-licensed: GPL version 2 or later and CC-BY-SA
 * tropicalbreeze.ogg - By flan, licensed CC-BY-SA 4.0
 * underwater.ogg - By SnugglyBun, licensed under CC-BY-SA 4.0
+* voc_night_alt.ogg - RodirodDude, remix of track by semadD, licensed under CC-BY-SA 4.0
 * voc-***.ogg - semajD, dual-licensed: GPL version 2 or later and CC-BY-SA
 * wisphunt.ogg - Marek "Wansti" Moeckel, dual-licensed: GPL version 2 or later and CC-BY-SA
 * worldmap_ice.ogg - By SnugglyBun, licensed under CC-BY-SA 4.0
