--- a/data/AUTHORS
+++ b/data/AUTHORS
@@ -44,7 +44,7 @@ License should be included with them.
 * cavetheme.ogg - By SnugglyBun, based on the original cave theme by Wansti. Licensed under CC-BY-SA 4.0
 * chipdisko.ogg - Mortimer's Chipdisko by Lukas Nystrand as Mortimer Twang - explicit permission granted to release under GPL and CC-BY-SA.
 * christmas_theme.ogg - Krobonil, remix of track by Marik "Wansti" Moeckel, licensed CC-BY-SA 2.0
-* classic.ogg - Unkown author and license
+* classic.ogg - "Turningpoint" by Retro (aka. Retro1, _Retro), archived at <https://web.archive.org/web/20030304015612/http://members.surfeu.fi/retro1/>. Unknown license.
 * clavelian_march.ogg - Treskalle, licensed under CC-BY-SA 4.0
 * counter_current.ogg - Servalot, license under CC-BY-SA 4.0
 * credits.ogg - Marek "Wansti" Moeckel, dual-licensed: GPL version 2 or later and CC-BY-SA
@@ -87,7 +87,7 @@ License should be included with them.
 * snowfort.ogg - By SnugglyBun, licensed under CC-BY-SA 4.0
 * sunset.ogg - By SnugglyBun, licensed under CC-BY-SA 4.0
 * theme.ogg - Marek "Wansti" Moeckel, dual-licensed: GPL version 2 or later and CC-BY-SA
-* theme_old.ogg - Author and license unknown
+* theme_old.ogg - Marek "Wansti" Moeckel, dual-licensed: GPL version 2 or later and CC-BY-SA
 * treeboss.ogg - Marek "Wansti" Moeckel, dual-licensed: GPL version 2 or later and CC-BY-SA
 * tropicalbreeze.ogg - By flan, licensed CC-BY-SA 4.0
 * underwater.ogg - By SnugglyBun, licensed under CC-BY-SA 4.0
