Address some level typos [ci skip]

--- a/data/levels/bonus1/messages.pot
+++ b/data/levels/bonus1/messages.pot
@@ -145,14 +145,14 @@ msgstr ""
 msgid ""
 "!images/objects/ghost_block/ghost_block.png\n"
 "-Ghost Blocks\n"
-"Ghost will only allow enemies to enter them. Anything else such as Tux will "
+"Ghost blocks will only allow enemies to enter them. Anything else such as Tux will "
 "be prevented from entering."
 msgstr ""
 
 #: data/levels/bonus1/snow_bowling.stl:394
 msgid ""
 "- Be careful!\n"
-"In this section your gonn have to beat the iceblock in a race to the end of "
+"In this section you're gonna have to beat the iceblock in a race to the end of "
 "the level! Make sure to go fast, as if you lose, you will have to restart "
 "the section."
 msgstr ""
