--- a/data/levels/revenge_in_redmond/messages.pot
+++ b/data/levels/revenge_in_redmond/messages.pot
@@ -91,7 +91,7 @@ msgid ""
 "\tAlas, he found neither Gown, nor the pilot\n"
 "\tof the helicopter there, but instead, a statue.\n"
 "\t\n"
-"\tIt depicted a scally creature with crossed arms.\n"
+"\tIt depicted a scaly creature with crossed arms.\n"
 "\tThe pedestal it resided on was inscribed\n"
 "\twith the word \"Nolok\". Was it a name?\n"
 "\t\n"
