--- a/data/AUTHORS
+++ b/data/AUTHORS
@@ -64,7 +64,7 @@ All files in data/music created by wansti and licensed under GPLv2+CC-by-sa, unl
 * invincible.ogg
 * arctic_breeze.ogg - Jason Lavallée, dual-licensed: GPL version 2 or later and CC-BY-SA
 * jewels.ogg - By Alex \"cynicmusic\" Smith edited by congusbongus - <http://opengameart.org/content/crystal-cave-mysterious-ambience-seamless-loop> - CC-BY 3.0/CC-BY-SA 3.0/GPL 3.0
-* leveldone.ogg
+* leveldone.wav
 * march_of_the_malevolent.ogg - Servalot, Wansti (original forest/'ghost' forest theme), licensed CC-BY-SA 4.0
 * new_forest_map.ogg - Jason Lavallée, dual-licensed: GPL version 2 or later and CC-BY-SA
 * salcon.ogg - Salsa Con Carne by DJ Gentoo based on work by Asbjorn \"Mystical\" Andersen - Replaced due to licensing issues (some non-free samples are used)
